--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>de.unibayreuth.bayceer.bayeos</groupId>
 	<artifactId>bayeos-server</artifactId>
 	<packaging>war</packaging>
-	<version>1.9.2-SNAPSHOT</version>
+	<version>1.9.2</version>
 	
 	<parent>
 		<groupId>de.unibayreuth.bayceer.bayeos</groupId>
