--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>de.unibayreuth.bayceer.bayeos</groupId>
 	<artifactId>bayeos-server</artifactId>
 	<packaging>war</packaging>
-	<version>1.9.4</version>
+	<version>1.9.5</version>
 	
 	<parent>
 		<groupId>de.unibayreuth.bayceer.bayeos</groupId>
@@ -20,7 +20,8 @@
 	
 	
 	<properties>	
-	    <dbUrl>jdbc:postgresql://localhost/bayeos</dbUrl>
+	    <dbUrl>jdbc:postgresql://bayeos-dev/bayeos</dbUrl>
+	    <!--  <dbUrl>jdbc:postgresql://localhost/bayeos</dbUrl>  -->
 		<dbUser>bayeos</dbUser>
 		<dbPassword>4336bc9de7a6b11940e897ee22956d51</dbPassword>					 	 		
 		<publish.path>${publish.debian.path}</publish.path>					 
