--- a/src/main/webapp/WEB-INF/log4j.properties
+++ b/src/main/webapp/WEB-INF/log4j.properties
@@ -1,5 +1,11 @@
 # Standard Logger in File
-log4j.rootLogger=DEBUG, A2
+log4j.rootLogger=${logLevel}, A1, A2
+log4j.appender.A1=org.apache.log4j.RollingFileAppender
+log4j.appender.A1.File=${logPath}
+log4j.appender.A1.MaxFileSize=1024KB
+log4j.appender.A1.MaxBackupIndex=10
+log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern=%d %-5p %C.%M %x - %m\n 
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.A2=org.apache.log4j.ConsoleAppender
