--- a/src/test/resources/test.properties
+++ b/src/test/resources/test.properties
@@ -1,3 +1,3 @@
-bayeos.url=http://localhost:8080/BayEOS-Server/XMLServlet
+bayeos.url=http://bayeos-dev/BayEOS-Server/XMLServlet
 bayeos.user.name=root
 bayeos.user.password=bayeos
