--- a/pom.xml
+++ b/pom.xml
@@ -73,10 +73,11 @@
 			<version>4.3</version>			
 		</dependency>
 		<dependency>
-			<groupId>postgresql</groupId>
+			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.1-901.jdbc4</version>			
-		</dependency>
+		<version>9.4-1201-jdbc41</version>
+</dependency>
+
 										
 	</dependencies>
 
