--- a/src/deb/data/etc/bayeos-server/log4j.properties
+++ b/src/deb/data/etc/bayeos-server/log4j.properties
@@ -1,5 +1,5 @@
 # Standard Logger in File
-log4j.rootLogger=${logLevel}, A1, A2
+log4j.rootLogger=INFO, A1, A2
 log4j.appender.A1=org.apache.log4j.RollingFileAppender
 log4j.appender.A1.File=${logPath}
 log4j.appender.A1.MaxFileSize=1024KB
