--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,8 @@
 
 	<groupId>de.unibayreuth.bayceer.bayeos</groupId>
 	<artifactId>bayeos-server</artifactId>
-	<packaging>docker</packaging>
 	<version>2.0.0-SNAPSHOT</version>
-
+	<packaging>jar</packaging>
 
 	<licenses>
 		<license>
@@ -28,55 +27,284 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<release>jessie</release>
-		
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<java.version>1.7</java.version>
-		
 		<jetty.version>9.2.19.v20160908</jetty.version>
 		<dbUser>bayeos</dbUser>
 		<dbPassword>4336bc9de7a6b11940e897ee22956d51</dbPassword>
 		<timeZone>GMT+1</timeZone>
-		<skipTests>true</skipTests>
-		<docker.skip>true</docker.skip>		
 		<server.port>9002</server.port>
 		<server.contextPath>/XMLServlet</server.contextPath>
 		<logLevel>INFO</logLevel>
-		 	
-		
 	</properties>
 
 	<profiles>
 		<profile>
 			<id>prod</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
 			<properties>
 				<dbUrl>jdbc:postgresql://localhost/bayeos</dbUrl>
-				<logPath>/var/log/bayeos-server.log</logPath>				
-			</properties>
-		</profile>
-		
-		<profile>
-			<id>docker</id>			
-			<properties>
-				<docker.skip>false</docker.skip>
-				<docker.host>https://docker:2376</docker.host>
-				<dbUrl>jdbc:postgresql://db/bayeos</dbUrl>				
-				<logPath>/var/log/bayeos-server.log</logPath>							
+				<logPath>/var/log/bayeos-server.log</logPath>
+				<skipTests>true</skipTests>
 			</properties>
 		</profile>
 
 		<profile>
-			<id>dev</id>
+			<id>test</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<properties>
-				<dbUrl>jdbc:postgresql://debian/bayeos</dbUrl>
-				<logPath>bayeos-server.log</logPath>
-				<logLevel>DEBUG</logLevel>
+				<docker.hostname>132.180.112.244</docker.hostname>
+				<docker.host>https://${docker.hostname}:2376</docker.host>
+				<dbUrl>jdbc:postgresql://db/bayeos</dbUrl>
+				<logPath>/var/log/bayeos-server.log</logPath>
 			</properties>
 		</profile>
 	</profiles>
+
+	<build>
+		<finalName>bayeos-server</finalName>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/deb</directory>
+				<filtering>true</filtering>
+				<targetPath>${project.build.directory}/deb</targetPath>
+			</resource>
+		</resources>
+
+		<plugins>
+			<plugin>
+				<!-- Runs the current version on docker -->
+				<groupId>io.fabric8</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<extensions>true</extensions>
+				<version>0.18.1</version>
+				<configuration>
+					<logDate>default</logDate>
+					<verbose>true</verbose>
+					<useColor>true</useColor>
+					<images>
+					
+					
+						<image>
+							<alias>postgres-perl</alias>
+							<name>bayceer/postgres-perl:9.4</name>							
+							<build>								
+								<from>postgres:9.4</from>
+								<runCmds>
+									<runCmd>apt-get update &amp;&amp; apt-get install -y postgresql-plperl-9.4 libpq-dev libmath-spline-perl</runCmd>									
+								</runCmds>
+							 </build>													
+						</image>
+						<image>
+							<alias>db</alias>
+							<name>bayceer/bayeos-server-db:${project.version}</name>
+							<build>								
+								<from>bayceer/postgres-perl:9.4</from>
+								<runCmds>	
+									<runCmd>localedef -i de_DE -c -f UTF-8 -A /usr/share/locale/locale.alias de_DE.UTF-8</runCmd>																	
+									<runCmd>echo "host  all  all  0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf</runCmd>
+								</runCmds>								
+								<env>
+									<POSTGRES_USER>${dbUser}</POSTGRES_USER>
+									<POSTGRES_PASSWORD>${dbPassword}</POSTGRES_PASSWORD>
+									<POSTGRES_INITDB_ARGS>--locale de_DE.UTF-8</POSTGRES_INITDB_ARGS>
+								</env>
+								<assembly>
+									<targetDir>/docker-entrypoint-initdb.d</targetDir>									
+									<inline>
+										<fileSets>
+											<fileSet>												
+												<directory>${project.basedir}/target/deb/data/usr/share/bayeos-server/sql</directory>
+												<outputDirectory>.</outputDirectory>
+											</fileSet>
+										</fileSets>
+									</inline>
+								</assembly>
+							</build>
+							<run>
+								<wait>
+									<log>PostgreSQL init process complete; ready for start up.</log>
+									<time>60000</time>									
+								</wait>								
+								
+								<log>
+									<prefix>DB:</prefix>
+									<color>blue</color>
+								</log>
+							</run>
+						</image>
+					
+						<image>
+							<alias>bayeos-server</alias>
+							<name>bayceer/bayeos-server:${project.version}</name>
+							<build>								
+								<from>java:7</from>
+								<assembly>
+									<descriptorRef>artifact</descriptorRef>
+								</assembly>
+								<cmd>
+									<shell>java -jar /maven/bayeos-server.jar ${server.port} ${server.contextPath}</shell>
+								</cmd>
+							</build>
+							<run>
+								<ports>
+									<port>${server.port}:${server.port}</port>
+								</ports>
+								<wait>
+									<http>
+										<url>http://${docker.hostname}:${server.port}${server.contextPath}</url>
+									</http>
+									<time>60000</time>
+								</wait>
+								<links>
+									<link>db:db</link>
+								</links>
+								<log>
+									<prefix>SERVER:</prefix>
+									<color>cyan</color>
+								</log>
+							</run>
+						</image>
+						
+					</images>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>build</goal>
+							<goal>start</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>stop</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>de.unibayreuth.bayceer.bayeos.server.App</mainClass>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<!-- Filtering of user defined variables in resources folders -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.0.1</version>
+				<configuration>
+					<nonFilteredFileExtensions>
+						<nonFilteredFileExtension>jar</nonFilteredFileExtension>
+						<nonFilteredFileExtension>sql</nonFilteredFileExtension>
+						<nonFilteredFileExtension>xml</nonFilteredFileExtension>
+					</nonFilteredFileExtensions>
+				</configuration>
+			</plugin>
+			<plugin>
+				<!-- Packages the application and all dependency in one jar -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.4.3</version>
+				<configuration>
+					<createDependencyReducedPom>false</createDependencyReducedPom>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+
+			<plugin>
+				<!-- Creates the debian deb package -->
+				<artifactId>jdeb</artifactId>
+				<groupId>org.vafer</groupId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jdeb</goal>
+						</goals>
+						<configuration>
+							<controlDir>${project.build.directory}/deb/control</controlDir>
+							<deb>${project.build.directory}/${project.artifactId}-${project.version}+${release}.deb</deb>
+							<verbose>false</verbose>
+							<dataSet>
+								<data>
+									<src>${project.build.directory}/deb/data</src>
+									<type>directory</type>
+								</data>
+								<data>
+									<src>${project.build.directory}/${project.build.finalName}.jar</src>
+									<dst>/var/lib/bayeos-server/bayeos-server.jar</dst>
+									<type>file</type>
+								</data>
+							</dataSet>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.10</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.17</version>
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<goals>
+							<goal>integration-test</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>verify</id>
+						<goals>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<systemPropertyVariables>
+						<server.url>http://${docker.hostname}:${server.port}${server.contextPath}</server.url>
+						<server.user>root</server.user>
+						<server.password>bayeos</server.password>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
+</plugins>
+</build>
 
 	<dependencies>
 		<dependency>
@@ -130,176 +358,7 @@
 	</dependencies>
 
 
-	<build>
-		<finalName>bayeos-server</finalName>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-			<resource>
-				<directory>src/deb</directory>
-				<filtering>true</filtering>
-				<targetPath>${project.build.directory}/deb</targetPath>
-			</resource>
-		</resources>
-		<testResources>
-			<testResource>
-				<directory>src/test/resources</directory>
-				<filtering>true</filtering>
-			</testResource>
-		</testResources>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.1</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>de.unibayreuth.bayceer.bayeos.server.App</mainClass>
-							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-			<plugin>
-				<!-- Filtering of user defined variables in resources folders -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<configuration>
-					<nonFilteredFileExtensions>
-						<nonFilteredFileExtension>jar</nonFilteredFileExtension>
-						<nonFilteredFileExtension>sql</nonFilteredFileExtension>
-						<nonFilteredFileExtension>xml</nonFilteredFileExtension>
-					</nonFilteredFileExtensions>
-				</configuration>
 
-			</plugin>
-			<plugin>
-				<!-- Packages the application and all dependency in one jar -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.4.3</version>
-				<configuration>
-        			<createDependencyReducedPom>false</createDependencyReducedPom>
-    			</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<!-- Creates the debian deb package -->
-				<artifactId>jdeb</artifactId>
-				<groupId>org.vafer</groupId>
-				<version>1.5</version>
 
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>jdeb</goal>
-						</goals>
-						<configuration>
-							<controlDir>${project.build.directory}/deb/control</controlDir>
-							<deb>${project.build.directory}/${project.artifactId}-${project.version}+${release}.deb</deb>
-							<verbose>false</verbose>
-							<dataSet>
-								<data>
-									<src>${project.build.directory}/deb/data</src>
-									<type>directory</type>
-								</data>
-								<data>
-									<src>${project.build.directory}/${project.build.finalName}.jar</src>
-									<dst>/var/lib/bayeos-server/bayeos-server.jar</dst>
-									<type>file</type>
-								</data>
-							</dataSet>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<!--  Runs the current version on docker -->
-				<groupId>io.fabric8</groupId>
-				<artifactId>docker-maven-plugin</artifactId>
-				<extensions>true</extensions>
-				<version>0.18.1</version>
-				<configuration>					
-					<images>
-						<image>
-							<alias>bayeos-server</alias>
-							<name>bayceer/bayeos-server:${project.version}</name>
-							<build>
-								<from>java:7</from>
-								<assembly>
-									<descriptorRef>artifact</descriptorRef>
-								</assembly>
-								<cmd>
-									<shell>java -jar /maven/bayeos-server.docker ${server.port} ${server.contextPath}</shell>
-								</cmd>
-							</build>
-							<run>
-								<ports>
-									<port>${server.port}:${server.port}</port>
-								</ports>
-								<wait>
-									<http>
-										<url>http://docker:${server.port}${server.contextPath}</url>
-									</http>
-									<time>10000</time>
-								</wait>
-								<links>
-									<link>db:db</link>
-								</links>
-							</run>
-						</image>
-
-						<image>
-							<alias>db</alias>
-							<name>bayceer/bayeos-server-db:${project.version}</name>
-							
-							<build>
-								<from>postgres:9.4</from>
-								<runCmds>
-									<runCmd>apt-get update &amp;&amp; apt-get install -y postgresql-plperl-9.4 libpq-dev libmath-spline-perl</runCmd>
-									<runCmd>localedef -i de_DE -c -f UTF-8 -A /usr/share/locale/locale.alias de_DE.UTF-8</runCmd>
-									<runCmd>echo "host all  all    0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf</runCmd>																		
-								</runCmds>
-								<env>
-									 <POSTGRES_USER>${dbUser}</POSTGRES_USER>
-									 <POSTGRES_PASSWORD>${dbPassword}</POSTGRES_PASSWORD>
-									 <POSTGRES_INITDB_ARGS>--locale de_DE.UTF-8</POSTGRES_INITDB_ARGS> 								 								
-								</env>							 							
-								
-								<assembly>		
-									<inline>									
-									<fileSets>
-										<fileSet>
-											<directory>${project.basedir}/target/deb/data/usr/share/bayeos-server/sql</directory>
-											<outputDirectory>/docker-entrypoint-initdb.d</outputDirectory>
-										</fileSet>
-									</fileSets>													
-									</inline>									
-								</assembly>
-							</build>
-							<run>
-								<wait>
-									<log>Datenbanksystem ist bereit, um Verbindungen anzunehmen</log>
-									<time>20000</time>
-								</wait>
-							</run>
-						</image>
-					</images>
-
-				</configuration>
-			</plugin>
-
-		</plugins>
-	</build>
+		
 </project>
