--- a/src/deb/control/control
+++ b/src/deb/control/control
@@ -1,9 +1,10 @@
 Package: bayeos-server
-Version: [[version]]
+Version: ${project.version}
 Section: server
 Priority: optional
 Architecture: all
 Pre-Depends: default-jre-headless (>= 2:1.7) | java7-runtime-headless
 Depends: postgresql (>= 9.0),  postgresql-contrib, postgresql-plperl, apache2, libpq-dev
+Recommends: ssl-cert
 Description: BayEOS XMLRPC Server a lightweight observation database interface
 Maintainer: oliver.archner@uni-bayreuth.de
