--- a/src/deb/data/etc/apache2/conf-available/bayeos-server-ssl.conf
+++ b/src/deb/data/etc/apache2/conf-available/bayeos-server-ssl.conf
@@ -1,8 +1,10 @@
-<Location /BayEOS-Server${server.contextPath}>
+<VirtualHost *:443>
     ProxyPreserveHost On
-    ProxyPass http://127.0.0.1:${server.port}${server.contextPath}
-    ProxyPassReverse http://127.0.0.1:${server.port}${server.contextPath}
+    ProxyPass ${server.contextPath} http://127.0.0.1:${server.port}${server.contextPath}
+    ProxyPassReverse ${server.contextPath} http://127.0.0.1:${server.port}${server.contextPath}
     SSLEngine on
-    SSLCertificateKeyFile /etc/apache2/mycert/server.key
-    SSLCertificateFile /etc/apache2/mycert/server.crt
-</Location>
+    # A self-signed (snakeoil) certificate created by installing the ssl-cert package. 
+    # See /usr/share/doc/apache2/README.Debian.gz for more info.    
+    SSLCertificateFile /etc/ssl/certs/ssl-cert-snakeoil.pem
+    SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
+</VirtualHost>
