--- a/src/deb/data/usr/share/bayeos-server/conf/flyway.conf
+++ b/src/deb/data/usr/share/bayeos-server/conf/flyway.conf
@@ -37,16 +37,16 @@
 # SQLite            : jdbc:sqlite:<database>
 # Sybase ASE        : jdbc:jtds:sybase://<host>:<port>/<database>
 # Vertica*          : jdbc:vertica://<host>:<port>/<database>
-flyway.url=jdbc:postgresql:bayeos
+flyway.url=${db.url}
 
 # Fully qualified classname of the jdbc driver (autodetected by default based on flyway.url)
 flyway.driver=org.postgresql.Driver
 
 # User to use to connect to the database. Flyway will prompt you to enter it if not specified.
-flyway.user=bayeos
+flyway.user=${db.user}
 
 # Password to use to connect to the database. Flyway will prompt you to enter it if not specified.
-flyway.password=4336bc9de7a6b11940e897ee22956d51
+flyway.password=${db.password}
 
 # Comma-separated list of schemas managed by Flyway. These schema names are case-sensitive.
 # (default: The default schema for the datasource connection)
