--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-url=${dbUrl}
-username=${dbUser}
-password=${dbPassword}
-timeZone=${timeZone}
-version=${version}
+url=${db.url}
+username=${db.user}
+password=${db.password}
+timeZone=${server.timezone}
+version=${project.version}
