--- a/src/deb/data/etc/apache2/conf-available/bayeos-server.conf
+++ b/src/deb/data/etc/apache2/conf-available/bayeos-server.conf
@@ -1,5 +1,5 @@
-<VirtualHost *:80>
+<Location "/BayEOS-Server${server.contextPath}">
     ProxyPreserveHost On
-    ProxyPass ${server.contextPath} http://127.0.0.1:${server.port}${server.contextPath}
-    ProxyPassReverse ${server.contextPath} http://127.0.0.1:${server.port}${server.contextPath}
-</VirtualHost>
+    ProxyPass http://localhost:${server.port}${server.contextPath}
+    ProxyPassReverse http://localhost:${server.port}${server.contextPath}
+</Location>
