--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.unibayreuth.bayceer.bayeos</groupId>
 	<artifactId>bayeos-server</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.2</version>
 	<packaging>jar</packaging>
 
 	<licenses>
@@ -24,14 +24,14 @@
 	<description>bayeos-server</description>
 
 	<properties>
-		<release>jessie</release>
-		<java.version>1.7</java.version>
+		<release>stretch</release>
+		<java.version>1.8</java.version>
 		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 
 		
 		<db.user>bayeos</db.user>
@@ -148,11 +148,11 @@
 					<images>
 						<image>							
 							<alias>postgres-perl</alias>
-							<name>bayceer/postgres-perl:9.4</name>							
+							<name>bayceer/postgres-perl:9.6</name>							
 							<build>								
-								<from>postgres:9.4</from>
+								<from>postgres:9.6</from>
 								<runCmds>
-									<runCmd>apt-get update &amp;&amp; apt-get install -y postgresql-plperl-9.4 libpq-dev libmath-spline-perl</runCmd>									
+									<runCmd>apt-get update &amp;&amp; apt-get install -y postgresql-plperl-9.6 libpq-dev libmath-spline-perl</runCmd>									
 								</runCmds>
 							 </build>													
 						</image>
@@ -160,7 +160,7 @@
 							<alias>db</alias>							
 							<name>bayceer/bayeos-server-db:${project.version}</name>
 							<build>								
-								<from>bayceer/postgres-perl:9.4</from>
+								<from>bayceer/postgres-perl:9.6</from>
 								<runCmds>	
 									<runCmd>localedef -i de_DE -c -f UTF-8 -A /usr/share/locale/locale.alias de_DE.UTF-8</runCmd>																	
 									<runCmd>echo "host  all  all  0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf</runCmd>
@@ -207,7 +207,7 @@
 							
 							<name>bayceer/bayeos-server:${project.version}</name>
 							<build>								
-								<from>java:7</from>								
+								<from>java:8</from>								
 								<assembly>
 									<descriptorRef>artifact</descriptorRef>
 								</assembly>
@@ -359,9 +359,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.4-1201-jdbc41</version>
+    		<groupId>org.postgresql</groupId>
+    		<artifactId>postgresql</artifactId>
+    		<version>42.1.4</version>
 		</dependency>
 
 		<dependency>
