Fixed login by ip

--- a/src/deb/data/etc/apache2/conf-available/bayeos-server.conf
+++ b/src/deb/data/etc/apache2/conf-available/bayeos-server.conf
@@ -3,3 +3,5 @@
     ProxyPass http://localhost:${server.port}${server.contextPath}
     ProxyPassReverse http://localhost:${server.port}${server.contextPath}
 </Location>
+
+RemoteIPHeader X-Forwarded-For
