--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.unibayreuth.bayceer.bayeos</groupId>
 	<artifactId>bayeos-server</artifactId>
-	<version>2.0.4</version>
+	<version>2.0.5</version>
 	<packaging>jar</packaging>
 
 	<licenses>
@@ -46,6 +46,18 @@
 	</properties>
 
 	<profiles>
+		<profile>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<id>dev</id>
+			<properties>
+				<log.level>INFO</log.level>
+				<log.path>bayeos-server.log</log.path>
+				<db.url>jdbc:postgresql://virtualbox/bayeos</db.url>
+			</properties>
+		</profile>
+		
 		<profile>
 			<id>prod</id>			
 			<properties>
@@ -349,7 +361,7 @@
 		<dependency>
 			<groupId>de.unibayreuth.bayceer.bayeos</groupId>
 			<artifactId>bayeos-xmlrpc</artifactId>
-			<version>1.9.9</version>
+			<version>2.0.0</version>
 		</dependency>
 
 		<dependency>
