--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>de.unibayreuth.bayceer.bayeos</groupId>
 	<artifactId>bayeos-server</artifactId>
-	<version>2.0.5</version>
+	<version>2.0.6</version>
 	<packaging>jar</packaging>
 
 	<licenses>
@@ -26,43 +26,45 @@
 	<properties>
 		<release>stretch</release>
 		<java.version>1.8</java.version>
+		<pg.version>9.6</pg.version>
+		<jetty.version>9.4.24.v20191120</jetty.version>
 		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-
 		
 		<db.user>bayeos</db.user>
 		<db.password>4336bc9de7a6b11940e897ee22956d51</db.password>
+		<db.url>jdbc:postgresql://localhost/bayeos</db.url>
 		
-		<server.timezone>GMT+1</server.timezone>
 		<server.port>5532</server.port>
+		<server.timezone>GMT+1</server.timezone>		
 		<server.contextPath>/XMLServlet</server.contextPath>
 		
-		<log.level>INFO</log.level>
-		<log.path>/var/log/bayeos-server.log</log.path>
+		<logging.level>INFO</logging.level>		
+		<logging.file>/var/log/bayeos-gateway.log</logging.file>
 	</properties>
 
 	<profiles>
 		<profile>
+			<id>dev</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
-			<id>dev</id>
+			
 			<properties>
-				<log.level>INFO</log.level>
-				<log.path>bayeos-server.log</log.path>
-				<db.url>jdbc:postgresql://virtualbox/bayeos</db.url>
+				<logging.level>DEBUG</logging.level>
+				<logging.file>bayeos-gateway.log</logging.file>
 			</properties>
 		</profile>
 		
 		<profile>
 			<id>prod</id>			
 			<properties>
-				<db.url>jdbc:postgresql://localhost/bayeos</db.url>				
-				<skipTests>true</skipTests>
+				<skipTests>true</skipTests>				
+				<log.level>INFO</log.level>				
 			</properties>
 			<build>
 			<plugins>
@@ -103,12 +105,8 @@
 
 		<profile>
 			<id>test</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
 			<properties>
-				<docker.hostname>docker</docker.hostname>
-				<docker.host>https://${docker.hostname}:2376</docker.host>
+				<docker.hostname>localhost</docker.hostname>
 				<db.url>jdbc:postgresql://db/bayeos</db.url>				
 			</properties>
 			<build>
@@ -148,39 +146,27 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<!-- Runs the current version on docker -->
 				<groupId>io.fabric8</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
 				<extensions>true</extensions>
-				<version>0.18.1</version>
+				<version>0.27.2</version>
 				<configuration>
-					<logDate>default</logDate>
 					<verbose>true</verbose>
 					<useColor>true</useColor>
-					<images>
-						<image>							
-							<alias>postgres-perl</alias>
-							<name>bayceer/postgres-perl:9.6</name>							
-							<build>								
-								<from>postgres:9.6</from>
-								<runCmds>
-									<runCmd>apt-get update &amp;&amp; apt-get install -y postgresql-plperl-9.6 libpq-dev libmath-spline-perl</runCmd>									
-								</runCmds>
-							 </build>													
-						</image>
+					<images>						
 						<image>
-							<alias>db</alias>							
-							<name>bayceer/bayeos-server-db:${project.version}</name>
+							<name>bayeos-server-db:${project.version}</name>
+							<alias>db</alias>														
 							<build>								
-								<from>bayceer/postgres-perl:9.6</from>
+								<from>postgres:${pg.version}</from>
 								<runCmds>	
 									<runCmd>localedef -i de_DE -c -f UTF-8 -A /usr/share/locale/locale.alias de_DE.UTF-8</runCmd>																	
-									<runCmd>echo "host  all  all  0.0.0.0/0  md5" >> /var/lib/postgresql/data/pg_hba.conf</runCmd>
+									<runCmd>apt-get update &amp;&amp; apt-get install -y --no-install-recommends postgresql-plperl-${pg.version} libpq-dev libmath-spline-perl</runCmd>
 								</runCmds>								
 								<env>
-									<POSTGRES_USER>${db.user}</POSTGRES_USER>
-									<POSTGRES_PASSWORD>${db.password}</POSTGRES_PASSWORD>
 									<POSTGRES_INITDB_ARGS>--locale de_DE.UTF-8</POSTGRES_INITDB_ARGS>
+									<POSTGRES_USER>${db.user}</POSTGRES_USER>
+									<POSTGRES_PASSWORD>${db.password}</POSTGRES_PASSWORD>									
 								</env>
 								<assembly>
 									<targetDir>/docker-entrypoint-initdb.d</targetDir>									
@@ -194,8 +180,8 @@
 									</inline>
 								</assembly>
 								 <tags>
-       						        <tag>latest</tag>
-                    				<tag>${project.version}</tag>                    				
+								 	<tag>${project.version}</tag>                    				
+       						        <tag>latest</tag>                    				
 								</tags>
 							</build>
 							<run>
@@ -203,7 +189,7 @@
 							
 							</labels>
 								<wait>
-									<log>PostgreSQL init process complete; ready for start up.</log>
+									<log>Datenbanksystem ist bereit, um Verbindungen anzunehmen</log>
 									<time>60000</time>									
 								</wait>								
 								
@@ -215,20 +201,19 @@
 						</image>
 					
 						<image>
+							<name>bayeos-server:${project.version}</name>
 							<alias>bayeos-server</alias>
-							
-							<name>bayceer/bayeos-server:${project.version}</name>
 							<build>								
 								<from>java:8</from>								
 								<assembly>
 									<descriptorRef>artifact</descriptorRef>
 								</assembly>
 								<cmd>
-									<shell>java -jar /maven/bayeos-server.jar ${server.port} ${server.contextPath}</shell>
+									<shell>java -jar /maven/bayeos-server.jar ${docker.hostname} ${server.port} ${server.contextPath}</shell>
 								</cmd>
 								<tags>
-       						        <tag>latest</tag>
-                    				<tag>${project.version}</tag>                    				
+									<tag>${project.version}</tag>                    				
+       						        <tag>latest</tag>                    				
 								</tags>
 							</build>
 							<run>
@@ -349,13 +334,13 @@
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>9.2.19.v20160908</version>
+			<version>${jetty.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlet</artifactId>
-			<version>9.2.19.v20160908</version>
+			<version>${jetty.version}</version>
 		</dependency>
 
 		<dependency>
